infra/k8s/network-policy-authenc-grpc.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-authenc-grpc","namespace":"simpelv2"},"spec":{"ingress":[{"from":[{"podSelector":{"matchLabels":{"component":"backend"}}}],"ports":[{"port":9088,"protocol":"TCP"},{"port":8088,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"app.kubernetes.io/name":"authenc"}},"policyTypes":["Ingress"]}}
  creationTimestamp: "2026-01-27T06:57:09Z"
  generation: 2
  name: allow-authenc-grpc
  namespace: simpelv2
  resourceVersion: "3296188"
  uid: 82100479-32d4-42cf-9d2c-04cd89290b1c
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          component: backend
    - podSelector:
        matchLabels:
          app.kubernetes.io/component: frontend
    ports:
    - port: 9088
      protocol: TCP
    - port: 8088
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: authenc
  policyTypes:
  - Ingress
